fix: ui alignment and mobile responsiveness

--- a/src/components/shared/button/Button.module.scss
+++ b/src/components/shared/button/Button.module.scss
@@ -50,4 +50,7 @@
   &__text {
     @apply text-black text-primary400 hover:text-white
   }
+  &__outline {
+    @apply text-primary400 border border-primary400 hover:text-white
+  }
 }
